// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanDownload Component should handle custom children: custom 1`] = `
<button
  aria-disabled="false"
  class="pf-c-button pf-m-primary"
  data-ouia-component-id="OUIA-Generated-Button-primary-3"
  data-ouia-component-type="PF4/Button"
  data-ouia-safe="true"
  title="Download"
  type="button"
>
  lorem ipsum
</button>
`;

exports[`ScanDownload Component should have an optional tooltip: tooltip 1`] = `
<ScanDownload
  downloadId={1}
  downloadName={null}
  getReportsDownload={[Function]}
  tooltip="Lorem ipsum dolor sit"
>
  <Tooltip
    content="Lorem ipsum dolor sit"
    delayShow={500}
    id={null}
    isPopover={false}
    placement="top"
  >
    <Tooltip
      className="quipucords-tooltip"
      content="Lorem ipsum dolor sit"
      entryDelay={500}
      id="generatedid-"
      position="top"
    >
      <Popper
        appendTo={[Function]}
        distance={15}
        enableFlip={true}
        flipBehavior={
          Array [
            "top",
            "right",
            "bottom",
            "left",
            "top",
            "right",
            "bottom",
          ]
        }
        isVisible={false}
        onBlur={[Function]}
        onDocumentClick={false}
        onDocumentKeyDown={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPopperMouseEnter={[Function]}
        onPopperMouseLeave={[Function]}
        onTriggerEnter={[Function]}
        placement="top"
        popper={
          <div
            aria-live="off"
            className="pf-c-tooltip quipucords-tooltip"
            id="generatedid-"
            role="tooltip"
            style={
              Object {
                "maxWidth": null,
                "opacity": 0,
                "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
              }
            }
          >
            <TooltipArrow />
            <TooltipContent
              isLeftAligned={false}
            >
              Lorem ipsum dolor sit
            </TooltipContent>
          </div>
        }
        popperMatchesTriggerWidth={false}
        positionModifiers={
          Object {
            "bottom": "pf-m-bottom",
            "bottom-end": "pf-m-bottom-right",
            "bottom-start": "pf-m-bottom-left",
            "left": "pf-m-left",
            "left-end": "pf-m-left-bottom",
            "left-start": "pf-m-left-top",
            "right": "pf-m-right",
            "right-end": "pf-m-right-bottom",
            "right-start": "pf-m-right-top",
            "top": "pf-m-top",
            "top-end": "pf-m-top-right",
            "top-start": "pf-m-top-left",
          }
        }
        trigger={
          <div
            className="quipucords-tooltip__wrapper"
          >
            <Button
              onClick={[Function]}
              title="Download"
            >
              Download
            </Button>
          </div>
        }
        zIndex={9999}
      >
        <FindRefWrapper
          onFoundRef={[Function]}
        >
          <div
            className="quipucords-tooltip__wrapper"
          >
            <Button
              onClick={[Function]}
              title="Download"
            >
              <ButtonBase
                innerRef={null}
                onClick={[Function]}
                title="Download"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-4"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[Function]}
                  role={null}
                  title="Download"
                  type="button"
                >
                  Download
                </button>
              </ButtonBase>
            </Button>
          </div>
        </FindRefWrapper>
      </Popper>
    </Tooltip>
  </Tooltip>
</ScanDownload>
`;

exports[`ScanDownload Component should render a connected component: connected 1`] = `
<button
  aria-disabled="false"
  class="pf-c-button pf-m-primary"
  data-ouia-component-id="OUIA-Generated-Button-primary-1"
  data-ouia-component-type="PF4/Button"
  data-ouia-safe="true"
  title="Download"
  type="button"
>
  Download
</button>
`;

exports[`ScanDownload Component should render a non-connected component: non-connected 1`] = `
<button
  aria-disabled="false"
  class="pf-c-button pf-m-primary"
  data-ouia-component-id="OUIA-Generated-Button-primary-2"
  data-ouia-component-type="PF4/Button"
  data-ouia-safe="true"
  title="Download"
  type="button"
>
  Download
</button>
`;
